Sightseer - The Presentation update!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.sightseer"
-        minSdkVersion 29
+        applicationId 'ga.denis.sightseer'
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        pickFirst '**/*.so'
+    }
 }
 
 dependencies {
@@ -35,6 +38,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     api project(path: ':openCVLib')
     implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.immomo.cosmos.baseutil:libcurl:2.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
